--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,10 @@
 Basic Installation
 ==================
 
-   These are generic installation instructions.
+   These are generic installation instructions, with minor updates
+for the `iverilog` project.
+
+   Instructions in the `README` are more concise for this project.
 
    The `configure` shell script attempts to guess correct values for
 various system-dependent variables used during compilation.  It uses
@@ -25,8 +28,12 @@ it or regenerate `configure` using a newer version of `autoconf`.
 
 The simplest way to compile this package is:
 
-  1. `cd` to the directory containing the package's source code and type
-     `./configure` to configure the package for your system.  If you're
+  1. `cd` to the directory containing the package's source code.
+  
+  2. Run `sh autoconf.sh`, if building from source (and not a release).
+     If you're building from a release, skip this step.
+
+  3. Run `./configure` to configure the package for your system.  If you're
      using `csh` on an old version of System V, you might need to type
      `sh ./configure` instead to prevent `csh` from trying to execute
      `configure` itself.
@@ -34,15 +41,15 @@ The simplest way to compile this package is:
      Running `configure` takes awhile.  While running, it prints some
      messages telling which features it is checking for.
 
-  2. Type `make` to compile the package.
+  4. Type `make` to compile the package.
 
-  3. Optionally, type `make check` to run any self-tests that come with
+  5. Optionally, type `make check` to run any self-tests that come with
      the package.
 
-  4. Type `make install` to install the programs and any data files and
-     documentation.
+  6. Type `make install` to install the programs and any data files and
+     documentation. You may need to use `sudo`.
 
-  5. You can remove the program binaries and object files from the
+  7. You can remove the program binaries and object files from the
      source code directory by typing `make clean`.  To also remove the
      files that `configure` created (so you can compile the package for
      a different kind of computer), type `make distclean`.  There is
@@ -59,10 +66,15 @@ the `configure` script does not know about.  You can give `configure`
 initial values for variables by setting them in the environment.  Using
 a Bourne-compatible shell, you can do that on the command line like
 this:
+
+```bash
      CC=c89 CFLAGS=-O2 LIBS=-lposix ./configure
+```
 
 Or on systems that have the `env` program, you can do it like this:
+```bash
      env CPPFLAGS=-I/usr/local/include LDFLAGS=-s ./configure
+```
 
 Compiling For Multiple Architectures
 ====================================
@@ -128,7 +140,7 @@ will run on.  Usually `configure` can figure that out, but if it prints
 a message saying it can not guess the host type, give it the
 `--host=TYPE` option.  TYPE can either be a short name for the system
 type, such as `sun4`, or a canonical name with three fields:
-     CPU-COMPANY-SYSTEM
+     `CPU-COMPANY-SYSTEM`
 
 See the file `config.sub` for the possible values of each field.  If
 `config.sub` isn't included in this package, then this package doesn't
